--- a/index.html
+++ b/index.html
@@ -6,21 +6,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Marvel</title>
-    <link rel="icon" type="image/png" href="./assets/Marvel-favicon.png"/>
+    <link rel="icon" type="image/png" href="./assets/Marvel-favicon.png" />
     <link rel="stylesheet" type="text/css" href="./styles/style.css">
 </head>
 
 <body>
 
-    <section class="container">
         <div class="slider-wrapper">
             <div class="slider">
-                <img id="slide-1" src="./assets/Cover-ironman.png"
-                    alt="Ironman" />
-                <img id="slide-2" src="./assets/Cover-america.png"
-                    alt="Capitain America" />
-                <img id="slide-3" src="./assets/Cover-deadpool.png"
-                    alt="Deadpool" />
+                <img id="slide-1" src="./assets/Cover-ironman.png" alt="Ironman" />
+                <img id="slide-2" src="./assets/Cover-america.png" alt="Capitain America" />
+                <img id="slide-3" src="./assets/Cover-deadpool.png" alt="Deadpool" />
             </div>
             <div class="slider-itens">
                 <div class="slider-nav">
@@ -31,12 +27,13 @@
             </div>
             <div class="items-wrapper">
                 <img class="marvel-logo" src="./Assets/Marvel-Logo.png" alt="marvel logo">
-                <h1>All your favourite MARVEL Movies & Series at one place</h1>
+                <div class="items-bottom">
+                    <h1>All your favourite MARVEL Movies & Series at one place</h1>
                     <button><a class="button-continue" href="./html/login.html">Continue</a></button>
+                </div>
             </div>
 
         </div>
-    </section>
 
 </body>
 
