--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 </div>
             </div>
             <div class="items-wrapper">
-                <img class="marvel-logo" src="./Assets/Marvel-Logo.png" alt="marvel logo">
+                <img class="marvel-logo" src="./Assets/Marvel-logo.png" alt="marvel logo">
                 <div class="items-bottom">
                     <h1>All your favourite MARVEL Movies & Series at one place</h1>
                     <button><a class="button-continue" href="./html/login.html">Continue</a></button>
