--- a/index.html
+++ b/index.html
@@ -12,28 +12,15 @@
 
 <body>
 
-        <div class="slider-wrapper">
-            <div class="slider">
-                <img id="slide-1" src="./assets/Cover-ironman.png" alt="Ironman" />
-                <img id="slide-2" src="./assets/Cover-america.png" alt="Capitain America" />
-                <img id="slide-3" src="./assets/Cover-deadpool.png" alt="Deadpool" />
+    <div class="container">
+        <div class="wrapper">
+            <img class="marvel-logo" src="./Assets/Marvel-Logo.png" alt="marvel logo">
+            <div class="items-bottom">
+                <h1>All your favourite MARVEL Movies & Series at one place</h1>
+                <button><a class="button-continue" href="./html/login.html">Continue</a></button>
             </div>
-            <div class="slider-itens">
-                <div class="slider-nav">
-                    <a href="#slide-1"></a>
-                    <a href="#slide-2"></a>
-                    <a href="#slide-3"></a>
-                </div>
-            </div>
-            <div class="items-wrapper">
-                <img class="marvel-logo" src="./Assets/Marvel-logo-2.png" alt="marvel logo">
-                <div class="items-bottom">
-                    <h1>All your favourite MARVEL Movies & Series at one place</h1>
-                    <button><a class="button-continue" href="./html/login.html">Continue</a></button>
-                </div>
-            </div>
-
         </div>
+    </div>
 
 </body>
 
