--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
 
     <div class="container">
         <div class="wrapper">
-            <img class="marvel-logo" src="./Assets/Marvel-Logo.png" alt="marvel logo">
-                <h1>All your favourite MARVEL Movies & Series at one place</h1>
-                <button><a class="button-continue" href="./html/login.html">Continue</a></button>
+            <img class="marvel-logo" src="./assets/logo.png" alt="marvel logo">
+            <h1>All your favourite MARVEL Movies & Series at one place</h1>
+            <button><a class="button-continue" href="./html/login.html">Continue</a></button>
         </div>
     </div>
 
