--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <div class="container">
         <div class="wrapper">
-            <img class="marvel-logo" src="./assets/logo.png" alt="marvel logo">
+            <img class="marvel-logo" src="./assets/Logo.png" alt="marvel logo">
             <h1>All your favourite MARVEL Movies & Series at one place</h1>
             <button><a class="button-continue" href="./html/login.html">Continue</a></button>
         </div>
